tests/codegen/fail/scalar_value/not_enum.rs
#[derive(coasys_juniper::ScalarValue)]
struct ScalarValue;

fn main() {}
